<resources>
    <string name="app_name">My Text View</string>
    <string name="name_text">SAZiD AL EMON</string>
    <string name="age">25  years old</string>
    <string name="proffession">Software Engineer</string>
    <string name="Address">Flat number: 2B House name: Haque Manjil Road number:30/C/1 Area name:East Noyatola Ward name: Maghbazar Thana: Hatirjheel District: Dhaka Post code: 1217</string>
    <string name="description_head">Life Details</string>
    <string name="description">
            Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Ipsam asperiores quo omnis, eum et fugit optio impedit totam
        maiores laudantium facere rem possimus nisi corrupti sint tenetur
        cupiditate commodi soluta iusto atque esse. Sit natus ipsum consequatur
        itaque pariatur architecto nesciunt aperiam iusto, ex, tempore,
        veritatis numquam. Inventore minus, id possimus eius ab rerum commodi
        doloremque tenetur eum quod sequi non nisi voluptatem veniam, velit
        amet unde cum accusamus excepturi vero esse, voluptate autem alias?
        Nulla, ut labore! Provident praesentium iste, ipsa sequi voluptatum
        perspiciatis labore veritatis deleniti? Doloremque voluptatem temporibus
        expedita laborum deleniti tempore autem officiis rerum porro aut.
        Neque dolore nihil, tempore esse omnis voluptatum repudiandae? Quisquam,
        recusandae cumque expedita nisi ipsam nihil earum eligendi,
        molestias asperiores in aliquam atque. \n\n Quidem asperiores amet
        necessitatibus qui deserunt, cupiditate possimus magnam facere
        quo odio commodi dicta quisquam sequi pariatur voluptate repellat
        totam autem numquam velit eaque unde iste esse, fuga laboriosam.
        Ipsam aut debitis animi delectus explicabo. Quidem quae, quod, sit
        maiores iure aperiam cupiditate voluptatibus beatae pariatur repellat
        itaque officia cumque, molestiae necessitatibus dignissimos quisquam
        soluta vero repellendus. Nisi dicta ipsa expedita vero, deleniti
        nesciunt eos delectus architecto eius esse, ut illum alias voluptatum.
        Consequuntur ipsam earum corporis nisi, animi accusantium molestiae ducimus
        eos provident nemo iure aliquam vitae sed adipisci quaerat culpa quae
        at non cumque laboriosam beatae eum eligendi laborum. Quaerat, unde eos repellendus
        tenetur doloribus obcaecati accusantium sequi voluptas ex officia
        id quo. Eaque, quisquam dolores commodi quidem nobis voluptatibus
        consectetur esse explicabo velit repudiandae impedit nisi molestias
        quia distinctio! Similique expedita maiores incidunt et nobis,
        provident consectetur veniam eaque neque quisquam sunt praesentium
        quidem nisi esse! Repellat culpa hic perspiciatis nostrum dolor in
        quibusdam exercitationem ipsam, ipsa delectus, impedit quod. \n\n Nobis
        omnis libero distinctio? Doloribus in accusamus eum officia quos
        molestias illo cumque recusandae at similique sapiente consequuntur
        ipsa impedit neque ducimus, explicabo corporis tenetur beatae
        reprehenderit ipsum! Quaerat voluptates dicta modi omnis excepturi.
        Dolore nesciunt numquam sint dolorum nam necessitatibus maxime odit
        provident veritatis. Odio quod, suscipit voluptates rem voluptatibus
        odit repudiandae, omnis dolorem placeat, explicabo ut nesciunt nihil
        aperiam? Numquam quos molestiae minima ab porro. Fuga repellendus
        aliquid, rem laborum excepturi culpa aliquam expedita recusandae at
        possimus sequi totam cumque debitis vitae et id veritatis eveniet
        cum fugit, architecto ducimus vel qui! Blanditiis expedita nesciunt
        eaque soluta accusantium deserunt eligendi suscipit veniam atque rem
        modi dolor debitis ea cum, provident quibusdam sapiente harum omnis
        quis quia necessitatibus ipsa distinctio. Error fuga eveniet vel at
        praesentium repellat eius aut repellendus ducimus vero! Sunt ducimus
        quibusdam rerum ipsa neque at atque culpa, unde veritatis eos maxime.
        Repudiandae nesciunt soluta magni officia, nobis alias porro cupiditate
        similique exercitationem amet consectetur nam, quod, ad hic quidem
        deleniti laborum eligendi pariatur. Fugiat eos a expedita blanditiis
        nihil autem, deserunt fuga! \n\n Molestiae magni reiciendis error repellat
        quia voluptate iure ipsam quae facilis modi, molestias neque unde dolore
        distinctio? Ullam omnis at quia voluptate dolore ad illum excepturi
        fugiat quae aliquid, consequuntur perferendis magni, accusantium deleniti,
        illo vel dolorum cum!
    </string>
    <string name="life_story">This is the life story of sazid</string>
</resources>