<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#1e98b0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="#FFD700"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/proffession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proffession"
        android:textColor="#FFD700"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:textColor="#008000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/description_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_head"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/life_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life_story"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </ScrollView>

</LinearLayout>